--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta charset="UTF-8" />
+  <!-- Primary favicon (PNG) located in the source images folder -->
+  <link rel="icon" type="image/png" href="/src/assets/images/favicon.ico" />
+  <!-- Fallback to an ICO placed in public/ (keeps compatibility with older browsers) -->
+  <link rel="alternate icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LA Consulting Corp</title>
   </head>
