--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,3 @@
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+<!-- Favicon fallback served from public/ -->
+<link rel="icon" type="image/png" href="/favicon.png" />
